RESOLVED FIXED165115
[CSS Parser] Fix bugs in the @supports parser
https://bugs.webkit.org/show_bug.cgi?id=165115
Summary [CSS Parser] Fix bugs in the @supports parser
Dave Hyatt
Reported 2016-11-28 14:19:26 PST
[CSS Parser] Fix bugs in the @supports parser
Attachments
Patch (7.71 KB, patch)
2016-11-28 14:24 PST, Dave Hyatt
zalan: review+
Dave Hyatt
Comment 1 2016-11-28 14:24:37 PST
alan
Comment 2 2016-11-28 14:28:30 PST
Comment on attachment 295533 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=295533&action=review > Source/WebCore/css/parser/CSSSupportsParser.h:32 > +#include "CSSParserToken.h" forward declare instead? > Source/WebCore/css/parser/CSSSupportsParser.h:38 > + extra tab?
Dave Hyatt
Comment 3 2016-11-28 14:30:39 PST
Fixed in r209021.
Note You need to log in before you can comment on or make changes to this bug.